--- a/k8s/apps/default/prowlarr/app/helmrelease.yaml
+++ b/k8s/apps/default/prowlarr/app/helmrelease.yaml
@@ -44,12 +44,12 @@ spec:
               PROWLARR__APP__THEME: dark
               PROWLARR__AUTH__METHOD: External
               PROWLARR__AUTH__REQUIRED: DisabledForLocalAddresses
-              # PROWLARR__LOG__DBENABLED: "False"
+              PROWLARR__LOG__DBENABLED: "False"
               PROWLARR__LOG__LEVEL: info
               PROWLARR__SERVER__PORT: &port 80
               PROWLARR__UPDATE__BRANCH: develop
               TZ: Australia/Sydney
-            # envFrom: *envFrom
+            envFrom: *envFrom
             probes:
               liveness: &probes
                 enabled: true
