--- a/k8s/apps/default/minio/app/helmrelease.yaml
+++ b/k8s/apps/default/minio/app/helmrelease.yaml
@@ -93,24 +93,22 @@ spec:
             scrapeTimeout: 10s
     ingress:
       app:
-        className: tailscale
+        annotations:
+          external-dns.alpha.kubernetes.io/target: internal.solanyn.dev
+        className: internal
         hosts:
-          - host: "{{ .Release.Name }}"
+          - host: "{{ .Release.Name }}.solanyn.dev"
             paths:
               - path: /
                 service:
                   identifier: app
                   port: http
-          - host: s3
+          - host: s3.solanyn.dev
             paths:
               - path: /
                 service:
                   identifier: app
                   port: s3
-        tls:
-          - hosts:
-              - s3
-              - minio
     persistence:
       config:
         type: nfs
