--- a/k8s/apps/flux-system/alerts/app/alert.yaml
+++ b/k8s/apps/flux-system/alerts/app/alert.yaml
@@ -5,8 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   type: alertmanager
-  secretRef:
-    name: alertmanager-secret
+  address: "http://alertmanager.observability.svc.cluster.local/api/v2/alerts"
 ---
 apiVersion: notification.toolkit.fluxcd.io/v1beta3
 kind: Alert
