--- a/k8s/templates/volsync/r2.yaml
+++ b/k8s/templates/volsync/r2.yaml
@@ -2,23 +2,23 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: "${APP}-volsync-backblaze"
+  name: "${APP}-volsync-r2"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: "${APP}-volsync-backblaze-secret"
+    name: "${APP}-volsync-r2-secret"
     template:
       engineVersion: v2
       data:
-        RESTIC_REPOSITORY: "{{ .BACKBLAZE_REPOSITORY }}/${APP}"
+        RESTIC_REPOSITORY: "{{ .RESTIC_REPOSITORY }}/${APP}"
         RESTIC_PASSWORD: "{{ .RESTIC_PASSWORD }}"
         AWS_ACCESS_KEY_ID: "{{ .AWS_ACCESS_KEY_ID }}"
         AWS_SECRET_ACCESS_KEY: "{{ .AWS_SECRET_ACCESS_KEY }}"
   dataFrom:
     - extract:
-        key: backblaze
+        key: r2
     - extract:
         key: volsync
 ---
@@ -26,7 +26,7 @@ spec:
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationSource
 metadata:
-  name: "${APP}-backblaze"
+  name: "${APP}-r2"
 spec:
   sourcePVC: "${APP}"
   trigger:
@@ -34,7 +34,7 @@ spec:
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 7
-    repository: "${APP}-volsync-backblaze-secret"
+    repository: "${APP}-volsync-r2-secret"
     volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-4Gi}"
     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}"
