--- a/k8s/templates/volsync/r2.yaml
+++ b/k8s/templates/volsync/r2.yaml
@@ -20,7 +20,7 @@ spec:
     - extract:
         key: r2
     - extract:
-        key: volsync-r2-template
+        key: volsync
 ---
 # yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/volsync.backube/replicationsource_v1alpha1.json
 apiVersion: volsync.backube/v1alpha1
