--- a/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
+++ b/k8s/apps/kyverno/kyverno/policies/volsync-movers.yaml
@@ -46,4 +46,4 @@ spec:
                   - name: repository
                     nfs:
                       server: nfs.internal
-                      path: /mnt/nfs/
+                      path: /mnt/nfs/backups/volsync
