--- a/k8s/templates/volsync/r2.yaml
+++ b/k8s/templates/volsync/r2.yaml
@@ -47,3 +47,6 @@ spec:
       fsGroup: ${VOLSYNC_PGID:-568}
     retain:
       daily: 7
+    enableFileDeletion: true
+    cleanupCachePVC: true
+    cleanupTempPVC: true
