--- a/k8s/templates/volsync/b2.yaml
+++ b/k8s/templates/volsync/b2.yaml
@@ -2,13 +2,13 @@
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: "${APP}-volsync-r2"
+  name: "${APP}-volsync-b2"
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: "${APP}-volsync-r2-secret"
+    name: "${APP}-volsync-b2-secret"
     template:
       engineVersion: v2
       data:
@@ -18,7 +18,7 @@ spec:
         AWS_SECRET_ACCESS_KEY: "{{ .AWS_SECRET_ACCESS_KEY }}"
   dataFrom:
     - extract:
-        key: r2
+        key: backblaze
     - extract:
         key: volsync
 ---
@@ -26,7 +26,7 @@ spec:
 apiVersion: volsync.backube/v1alpha1
 kind: ReplicationSource
 metadata:
-  name: "${APP}-r2"
+  name: "${APP}-b2"
 spec:
   sourcePVC: "${APP}"
   trigger:
@@ -34,7 +34,7 @@ spec:
   restic:
     copyMethod: "${VOLSYNC_COPYMETHOD:-Snapshot}"
     pruneIntervalDays: 14
-    repository: "${APP}-volsync-r2-secret"
+    repository: "${APP}-volsync-b2-secret"
     volumeSnapshotClassName: "${VOLSYNC_SNAPSHOTCLASS:-csi-ceph-blockpool}"
     cacheCapacity: "${VOLSYNC_CACHE_CAPACITY:-10Gi}"
     cacheStorageClassName: "${VOLSYNC_CACHE_SNAPSHOTCLASS:-openebs-hostpath}"
