--- a/k8s/apps/default/jellyseerr/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyseerr/app/helmrelease.yaml
@@ -34,8 +34,8 @@ spec:
         containers:
           app:
             image:
-              repository: ghcr.io/hotio/jellyseerr
-              tag: release-1.9.2@sha256:4062fb1a2df222569c0c7800b6eed79f7e81f5445a64d007c252658f424927d7
+              repository: fallenbagel/jellyseerr
+              tag: develop
             env:
               TZ: Australia/Sydney
             resources:
