--- a/k8s/flux/repositories/helm/kafka.yaml
+++ b/k8s/flux/repositories/helm/kafka.yaml
@@ -4,5 +4,6 @@ metadata:
   name: kafka
   namespace: flux-system
 spec:
+  type: oci
   interval: 1h
   url: oci://quay.io/strimzi-helm/strimzi-kafka-operator
