--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -95,55 +95,17 @@ tasks:
       - msg: Missing helmfile
         sh: test -f {{.HELMFILE_FILE}}
   rook:
-    vars: &vars
-      CLUSTER: '{{.CLUSTER}}'
-      NODE: '{{.ITEM}}'
-      DISK: '{{.DISK}}'
     cmds:
-      - for: {var: NODES}
-        task: rook-data
-        vars: *vars
-      - for: {var: NODES}
-        task: rook-disk
-        vars: *vars
-  rook-disk:
-    internal: true
-    cmds:
-      - '{{.MINIJINJA_CMD}} {{.BOOTSTRAP_RESOURCES_DIR}}/templates/rook-disk-job.yaml.j2 | kubectl apply -f -'
-      - bash {{.BOOTSTRAP_RESOURCES_DIR}}/scripts/wait-for-job.sh {{.JOB}} {{.NS}}
-      - kubectl --namespace {{.NS}} wait job/{{.JOB}} --for condition=complete --timeout=1m
-      - kubectl --namespace {{.NS}} logs job/{{.JOB}}
-      - kubectl --namespace {{.NS}} delete job {{.JOB}}
-    vars:
-      JOB: wipe-disk-{{.NODE}}
-      NS: '{{.NS | default "default"}}'
+      - minijinja-cli {{.BOOTSTRAP_RESOURCES_DIR}}/wipe-rook-job.yaml.j2 | kubectl apply --server-side --filename -
+      - until kubectl --namespace default get job/wipe-rook &>/dev/null; do sleep 5; done
+      - kubectl --namespace default wait job/wipe-rook --for=condition=complete --timeout=5m
+      - kubectl --namespace default logs job/wipe-rook
+      - kubectl --namespace default delete job wipe-rook
     env:
-      DISK: '{{.DISK}}'
-      JOB: '{{.JOB}}'
-      NODE: '{{.NODE}}'
-      NS: '{{.NS}}'
+      TOTAL_NODES: '{{len (splitList "," .NODES)}}'
+      ROOK_DISK: '{{.ROOK_DISK}}'
     preconditions:
-      - test -f {{.BOOTSTRAP_RESOURCES_DIR}}/scripts/wait-for-job.sh
-      - test -f {{.BOOTSTRAP_RESOURCES_DIR}}/templates/rook-disk-job.yaml.j2
-  rook-data:
-    internal: true
-    cmds:
-      - '{{.MINIJINJA_CMD}} {{.BOOTSTRAP_RESOURCES_DIR}}/templates/rook-data-job.yaml.j2 | kubectl apply -f -'
-      - bash {{.BOOTSTRAP_RESOURCES_DIR}}/scripts/wait-for-job.sh {{.JOB}} {{.NS}}
-      - kubectl --namespace {{.NS}} wait job/{{.JOB}} --for condition=complete --timeout=1m
-      - kubectl --namespace {{.NS}} logs job/{{.JOB}}
-      - kubectl --namespace {{.NS}} delete job {{.JOB}}
-    vars:
-      JOB: wipe-data-{{.NODE}}
-      NS: '{{.NS | default "default"}}'
-    env:
-      DISK: '{{.DISK}}'
-      JOB: '{{.JOB}}'
-      NODE: '{{.NODE}}'
-      NS: '{{.NS}}'
-    preconditions:
-      - test -f {{.BOOTSTRAP_RESOURCES_DIR}}/scripts/wait-for-job.sh
-      - test -f {{.BOOTSTRAP_RESOURCES_DIR}}/templates/rook-data-job.yaml.j2
+      - test -f {{.BOOTSTRAP_RESOURCES_DIR}}/wipe-rook-job.yaml.j2
   flux:
     desc: Bootstrap Flux into a Kubernetes cluster
     cmds:
