--- a/k8s/apps/database/valkey/app/helmrelease.yaml
+++ b/k8s/apps/database/valkey/app/helmrelease.yaml
@@ -11,7 +11,7 @@ spec:
       version: 2.0.1
       sourceRef:
         kind: HelmRepository
-        name: redis
+        name: valkey
         namespace: flux-system
   install:
     remediation:
