--- a/k8s/apps/database/kustomization.yaml
+++ b/k8s/apps/database/kustomization.yaml
@@ -6,5 +6,5 @@ resources:
   - ./namespace.yaml
   # Flux-Kustomizations
   - ./cloudnative-pg/ks.yaml
-  - ./redis/ks.yaml
+  - ./valkey/ks.yaml
   # - ./druid/ks.yaml
