--- a/k8s/apps/default/qbittorrent/app/helmrelease.yaml
+++ b/k8s/apps/default/qbittorrent/app/helmrelease.yaml
@@ -78,7 +78,7 @@ spec:
                 cpu: 10m
               limits:
                 memory: 128Mi
-            securityContext: *securityContext
+                # securityContext: *securityContext
     defaultPodOptions:
       securityContext:
         runAsNonRoot: true
