--- a/k8s/apps/database/redis/ks.yaml
+++ b/k8s/apps/database/redis/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app valkey
+  name: &app redis
   namespace: flux-system
 spec:
   targetNamespace: database
@@ -24,7 +24,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: &app valkey-cluster
+  name: &app redis-cluster
   namespace: flux-system
 spec:
   targetNamespace: database
