--- a/k8s/apps/default/jellyfin/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyfin/app/helmrelease.yaml
@@ -49,8 +49,8 @@ spec:
                 custom: true
                 spec:
                   httpGet:
-                    path: /identity
-                    port: 32400
+                    path: /health
+                    port: &port 8096
                   initialDelaySeconds: 0
                   periodSeconds: 10
                   timeoutSeconds: 1
@@ -86,7 +86,7 @@ spec:
           lbipam.cilium.io/ips: 192.168.68.128
         ports:
           http:
-            port: 8096
+            port: *port
     ingress:
       app:
         annotations:
