--- a/k8s/apps/default/komga/app/kustomization.yaml
+++ b/k8s/apps/default/komga/app/kustomization.yaml
@@ -4,4 +4,5 @@ kind: Kustomization
 resources:
   - ./pvc.yaml
   - ./helmrelease.yaml
+  - ../../../../templates/gatus/guarded
   - ../../../../templates/volsync
