--- a/k8s/apps/default/jellyfin/app/helmrelease.yaml
+++ b/k8s/apps/default/jellyfin/app/helmrelease.yaml
@@ -64,6 +64,7 @@ spec:
             resources:
               requests:
                 cpu: 10m
+                memory: 128Mi
               limits:
                 gpu.intel.com/i915: 1
                 memory: 16Gi
