--- a/k8s/apps/database/redis/cluster/redis7.yaml
+++ b/k8s/apps/database/redis/cluster/redis7.yaml
@@ -44,6 +44,7 @@ spec:
     nodeConfVolume: true
     nodeConfVolumeClaimTemplate:
       spec:
+        storageClassName: openebs-hostpath
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
