--- a/k8s/apps/default/immich/app/helmrelease.yaml
+++ b/k8s/apps/default/immich/app/helmrelease.yaml
@@ -36,6 +36,7 @@ spec:
         enabled: true
       persistence:
         library:
+          existingClaim: false
           type: nfs
           server: 192.168.68.10
           path: /mnt/nfs
