--- a/k8s/apps/network/cloudflared/app/dnsendpoint.yaml
+++ b/k8s/apps/network/cloudflared/app/dnsendpoint.yaml
@@ -9,4 +9,4 @@ spec:
       targets: ["${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
     - dnsName: "external.${SECRET_DEV_DOMAIN}"
       recordType: CNAME
-      targets: ["${SECRET_CLOUDFLARE_TUNNEL_ID}.cfargotunnel.com"]
+      targets: ["external.${SECRET_HOME_DOMAIN}"]
