--- a/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -17,6 +17,8 @@ spec:
     parameters:
       max_connections: "400"
       shared_buffers: 256MB
+    shared_preload_libraries:
+      - "vectors.so"
   nodeMaintenanceWindow:
     inProgress: false
     reusePVC: true
@@ -48,13 +50,16 @@ spec:
         secretAccessKey:
           name: cloudnative-pg-secret
           key: aws-secret-access-key
-  # Note: previousCluster needs to be set to the name of the previous
+  # NOTE: previousCluster needs to be set to the name of the previous
   # cluster when recovering from an existing cnpg cluster
   bootstrap:
-    # NOTE: Set initdb and comment out recovery when no backup (the very first bootstrap)!
-    # initdb:
-    #   database: postgres16-v0
-    #   owner: postgres
+    initdb:
+      # NOTE: Set initdb and comment out recovery when no backup (the very first bootstrap)!
+      #   database: postgres16-v0
+      #   owner: postgres
+      postInitSQL:
+        - ALTER SYSTEM SET search_path TO "$user", public, vectors;
+        - CREATE EXTENSION IF NOT EXISTS "vectors";
     recovery:
       source: &previousCluster postgres16-v1
   # NOTE: externalClusters is needed when recovering from an EXISTING cnpg cluster
