--- a/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
+++ b/k8s/apps/database/cloudnative-pg/cluster/cluster16.yaml
@@ -5,7 +5,7 @@ metadata:
   name: postgres16
 spec:
   instances: 1
-  imageName: ghcr.io/cloudnative-pg/postgresql:16.4-28
+  imageName: ghcr.io/tensorchord/cloudnative-pgvecto.rs:16.4
   primaryUpdateStrategy: unsupervised
   storage:
     size: 20Gi
