--- a/k8s/apps/database/redis/cluster/redis7.yaml
+++ b/k8s/apps/database/redis/cluster/redis7.yaml
@@ -1,7 +1,7 @@
 apiVersion: redis.redis.opstreelabs.in/v1beta2
-kind: RedisCluster
+kind: RedisSentinel
 metadata:
-  name: redis7
+  name: redis-7
 spec:
   clusterSize: 1
   clusterVersion: v7
@@ -9,6 +9,8 @@ spec:
   podSecurityContext:
     runAsUser: 1000
     fsGroup: 1000
+  pdb:
+    enabled: false
   kubernetesConfig:
     image: quay.io/opstree/redis:v7.0.12
     imagePullPolicy: IfNotPresent
