--- a/k8s/apps/database/redis/cluster/redis7.yaml
+++ b/k8s/apps/database/redis/cluster/redis7.yaml
@@ -9,6 +9,16 @@ spec:
     fsGroup: 1000
   pdb:
     enabled: false
+  kubernetesConfig:
+    image: quay.io/opstree/redis:v7.0.12
+    imagePullPolicy: IfNotPresent
+    resources:
+      requests:
+        cpu: 10m
+        memory: 128Mi
+      limits:
+        cpu: 101m
+        memory: 128Mi
   redisExporter:
     enabled: false
     image: quay.io/opstree/redis-exporter:v1.44.0
