--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -29,7 +29,7 @@ tasks:
       - task: up
     vars:
       TALOS_SCHEMATIC_ID:
-        sh: kubectl get nodes --output json | jq --raw-output '.items[] | select(.status.addresses[] | select(.type == "InternalIP" and .address == "{{.IP}}")) | .metadata.annotations."extensions.talos.dev/schematic"'
+        sh: talosctl --nodes {{.IP}} get nodeannotationspecs --output json | jq --raw-output '.spec | select(.key == "extensions.talos.dev/schematic") | .value'
       TALOS_SECUREBOOT:
         sh: talosctl --nodes {{.IP}} get securitystate --output=jsonpath='{.spec.secureBoot}'
     requires:
@@ -40,13 +40,14 @@ tasks:
       - talosctl config info
       - test -f {{.CLUSTER_DIR}}/cluster.env
       - test -f {{.CLUSTER_DIR}}/talosconfig
-      - which kubectl talosctl
+      - which jq kubectl talosctl
   upgrade-k8s:
     desc: Upgrade Kubernetes across the whole cluster [CLUSTER=main] [VERSION=required]
     dotenv: ['{{.CLUSTER_DIR}}/cluster.env']
     cmds:
       - task: down
       - talosctl --nodes {{.TALOS_CONTROLLER}} upgrade-k8s --to $KUBERNETES_VERSION
+      - talosctl health --wait-timeout=10m --server=false
       - task: up
     vars:
       TALOS_CONTROLLER:
@@ -59,26 +60,30 @@ tasks:
       - talosctl config info
       - test -f {{.CLUSTER_DIR}}/cluster.env
       - test -f {{.CLUSTER_DIR}}/talosconfig
-      - which talosctl
+      - which jq talosctl
   reboot-node:
-    desc: Reboot Talos on a single node [CLUSTER=main] [IP=required]
+    desc: Reboot Talos on a single node [CLUSTER=main] [IP=required] [MODE=default]
     cmds:
       - task: down
-      - talosctl --nodes {{.IP}} reboot
+      - talosctl --nodes {{.IP}} reboot --mode={{.MODE}}
       - talosctl --nodes {{.IP}} health --wait-timeout=10m --server=false
       - task: up
+    vars:
+      MODE: '{{.MODE | default "default"}}'
     requires:
       vars: [CLUSTER, IP]
     preconditions:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
+      - test -f {{.CLUSTER_DIR}}/cluster.env
+      - test -f {{.CLUSTER_DIR}}/talosconfig
       - which talosctl
   shutdown-cluster:
     desc: Shutdown Talos across the whole cluster [CLUSTER=main]
     prompt: Shutdown the Talos cluster '{{.CLUSTER}}' ... continue?
-    cmd: talosctl shutdown --nodes {{.IPS}} --force
+    cmd: talosctl shutdown --nodes {{.IP_ADDRS}} --force
     vars:
-      IPS:
+      IP_ADDRS:
         sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
     requires:
       vars: [CLUSTER]
@@ -97,12 +102,13 @@ tasks:
       - talosctl --nodes {{.IP}} get machineconfig
       - talosctl config info
       - test -f {{.CLUSTER_DIR}}/talosconfig
+      - which talosctl
   reset-cluster:
     desc: Reset Talos across the whole cluster [CLUSTER=main]
     prompt: Reset the Talos cluster '{{.CLUSTER}}' ... continue?
-    cmd: talosctl reset --nodes {{.IPS}} --graceful=false
+    cmd: talosctl reset --nodes {{.IP_ADDRS}} --graceful=false
     vars:
-      IPS:
+      IP_ADDRS:
         sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(",")'
     requires:
       vars: [CLUSTER]
@@ -122,13 +128,61 @@ tasks:
     preconditions:
       - talosctl config info
       - test -f {{.CLUSTER_DIR}}/talosconfig
-      - which talosctl
+      - which jq talosctl
+  apply-cluster:
+    desc: Apply Talos config across the whole cluster [CLUSTER=main] [MODE=default]
+    cmds:
+      - for: {var: IP_ADDRS}
+        task: apply-node
+        vars:
+          IP: '{{.ITEM}}'
+          MODE: '{{.MODE}}'
+          CLUSTER: '{{.CLUSTER}}'
+    vars:
+      MODE: '{{.MODE | default "auto"}}'
+      IP_ADDRS:
+        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(" ")'
+    requires:
+      vars: [CLUSTER]
+    preconditions:
+      - which jq talosctl
+  upgrade-cluster:
+    desc: Upgrade Talos across the whole cluster [CLUSTER=main]
+    cmds:
+      - for: {var: IP_ADDRS}
+        task: upgrade-node
+        vars:
+          IP: '{{.ITEM}}'
+          CLUSTER: '{{.CLUSTER}}'
+    vars:
+      IP_ADDRS:
+        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(" ")'
+    requires:
+      vars: [CLUSTER]
+    preconditions:
+      - which jq talosctl
+  reboot-cluster:
+    desc: Reboot Talos on a single node [CLUSTER=main] [IP=required] [MODE=default]
+    cmds:
+      - for: {var: IP_ADDRS}
+        task: reboot-node
+        vars:
+          IP: '{{.ITEM}}'
+          MODE: '{{.MODE}}'
+          CLUSTER: '{{.CLUSTER}}'
+    vars:
+      IP_ADDRS:
+        sh: talosctl config info --output json | jq --join-output '[.nodes[]] | join(" ")'
+    requires:
+      vars: [CLUSTER]
+    preconditions:
+      - which jq talosctl
   down:
     internal: true
     cmds:
+      # - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_OK --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
       - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_WARN --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
       - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
-      - task: :v:state-suspend
     preconditions:
       - which kubectl
   up:
@@ -136,6 +190,5 @@ tasks:
     cmds:
       - until kubectl wait cephcluster --for=jsonpath=.status.ceph.health=HEALTH_WARN --timeout=10m --all --all-namespaces &>/dev/null; do sleep 5; done
       - until kubectl wait jobs --all --all-namespaces --for=condition=complete --timeout=5m &>/dev/null; do sleep 5; done
-      - task: :v:state-resume
     preconditions:
       - which kubectl
