--- a/k8s/apps/flux-system/flux-operator/instance/github/webhooks/kustomization.yaml
+++ b/k8s/apps/flux-system/flux-operator/instance/github/webhooks/kustomization.yaml
@@ -2,8 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  # Pre Flux-Kustomizations
-  - ./namespace.yaml
-  # Flux-Kustomizations
-  - ./flux-operator/ks.yaml
-  - ./github/ks.yaml
+  - ./externalsecret.yaml
+  - ./ingress.yaml
+  - ./receiver.yaml
