--- a/k8s/bootstrap/apps/helmfile.yaml
+++ b/k8s/bootstrap/apps/helmfile.yaml
@@ -1,7 +1,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/helmfile
 
-# renovate: datasource=docker depName=ghcr.io/siderolabs/kubelet
-kubeVersion: v1.32.0
 helmDefaults:
   force: true
   timeout: 600
@@ -23,9 +21,6 @@ releases:
     version: 1.16.5
     values:
       - ../../apps/kube-system/cilium/app/helm-values.yaml
-      - commonLabels:
-          helm.toolkit.fluxcd.io/name: cilium
-          helm.toolkit.fluxcd.io/namespace: kube-system
     needs:
       - observability/kube-prometheus-stack-crds
   - name: coredns
@@ -34,9 +29,6 @@ releases:
     version: 1.37.0
     values:
       - ../../apps/kube-system/coredns/app/helm-values.yaml
-      - customLabels:
-          helm.toolkit.fluxcd.io/name: coredns
-          helm.toolkit.fluxcd.io/namespace: kube-system
     needs:
       - kube-system/cilium
   - name: spegel
@@ -46,29 +38,29 @@ releases:
     values:
       - ../../apps/kube-system/spegel/app/helm-values.yaml
     needs:
-      - kube-system/cilium
-  - name: flux
-    namespace: flux-system
-    chart: oci://ghcr.io/fluxcd-community/charts/flux2
-    version: 2.14.1
-    values:
-      - ../../apps/flux-system/flux/app/helm-values.yaml
-      - helmController:
-          labels:
-            helm.toolkit.fluxcd.io/name: flux
-            helm.toolkit.fluxcd.io/namespace: flux-system
-      - kustomizeController:
-          labels:
-            helm.toolkit.fluxcd.io/name: flux
-            helm.toolkit.fluxcd.io/namespace: flux-system
-      - notificationController:
-          labels:
-            helm.toolkit.fluxcd.io/name: flux
-            helm.toolkit.fluxcd.io/namespace: flux-system
-      - sourceController:
-          labels:
-            helm.toolkit.fluxcd.io/name: flux
-            helm.toolkit.fluxcd.io/namespace: flux-system
-    needs:
       - kube-system/coredns
+  - name: wipe-rook
+    namespace: kube-system
+    chart: oci://ghcr.io/bjw-s/helm/app-template
+    version: 3.6.0
+    values:
+      - ./templates/wipe-rook.yaml.gotmpl
+    needs:
       - kube-system/spegel
+  - name: flux-operator
+    namespace: flux-system
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
+    version: 0.12.0
+    values:
+      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
+    needs:
+      - kube-system/wipe-rook
+  - name: flux-instance
+    namespace: flux-system
+    chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-instance
+    version: 0.12.0
+    wait: false
+    values:
+      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
+    needs:
+      - flux-system/flux-operator
