--- a/k8s/flux/repos/helm/kustomization.yaml
+++ b/k8s/flux/repos/helm/kustomization.yaml
@@ -4,6 +4,7 @@ resources:
   - ./actions-runner-controller.yaml
   - ./bjw-s.yaml
   - ./cilium.yaml
+  - ./controlplaneio.yaml
   - ./coredns.yaml
   - ./descheduler.yaml
   - ./emqx.yaml
