--- a/k8s/apps/observability/unpoller/app/helmrelease.yaml
+++ b/k8s/apps/observability/unpoller/app/helmrelease.yaml
@@ -34,7 +34,7 @@ spec:
               tag: v2.13.1@sha256:2376aff5e18b8f9fdd618becc2ef668ce31deb4c0e74acc5bea88e6c20c23a39
             env:
               TZ: Australia/Sydney
-              UP_UNIFI_DEFAULT_ROLE: home-ops
+              UP_UNIFI_DEFAULT_ROLE: unpoller
               UP_UNIFI_DEFAULT_URL: https://192.168.1.1
               UP_PROMETHEUS_HTTP_LISTEN: 0.0.0.0:80
               UP_INFLUXDB_DISABLE: true
