--- a/k8s/apps/observability/unpoller/app/helmrelease.yaml
+++ b/k8s/apps/observability/unpoller/app/helmrelease.yaml
@@ -41,11 +41,11 @@ spec:
             envFrom:
               - secretRef:
                   name: unpoller-secret
-            probes:
-              liveness:
-                enabled: true
-              readiness:
-                enabled: true
+            # probes:
+            #   liveness:
+            #     enabled: true
+            #   readiness:
+            #     enabled: true
             securityContext:
               allowPrivilegeEscalation: false
               readOnlyRootFilesystem: true
