--- a/kubernetes/apps/default/zipline/app/externalsecret.yaml
+++ b/kubernetes/apps/default/zipline/app/externalsecret.yaml
@@ -17,7 +17,7 @@ spec:
         INIT_POSTGRES_USER: "{{ .ZIPLINE_POSTGRES_USER }}"
         INIT_POSTGRES_PASS: "{{ .ZIPLINE_POSTGRES_PASSWORD }}"
         INIT_POSTGRES_SUPER_PASS: "{{ .POSTGRES_SUPER_PASS }}"
-        DATABASE_URL: "postgres://{{ .ZIPLINE_POSTGRES_USER }}:{{ .ZIPLINE_POSTGRES_PASSWORD }}@zipline/zipline"
+        DATABASE_URL: "postgres://{{ .ZIPLINE_POSTGRES_USER }}:{{ .ZIPLINE_POSTGRES_PASSWORD }}@postgres16-rw.database.svc.cluster.local/zipline"
   dataFrom:
     - extract:
         key: zipline
