--- a/kubernetes/apps/network/internal/external-dns/helmrelease.yaml
+++ b/kubernetes/apps/network/internal/external-dns/helmrelease.yaml
@@ -32,7 +32,7 @@ spec:
           tag: v0.4.0@sha256:f71f9e64f723a1af77e9ecdcbaef2db2095721d33b385baee1848d0bf09d44e7
         env:
           - name: UNIFI_HOST
-            value: https://unifi.internal
+            value: https://191.168.1.1
           - name: UNIFI_API_KEY
             valueFrom:
               secretKeyRef:
