--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -28,6 +28,7 @@ resources:
   - ./tautulli/ks.yaml
   - ./jellyseerr/ks.yaml
   - ./wizarr/ks.yaml
+  - ./filebrowser/ks.yaml
   - ./emailer/ks.yaml
   - ./thelounge/ks.yaml
   - ./actual/ks.yaml
