--- a/.taskfiles/talos/Taskfile.yaml
+++ b/.taskfiles/talos/Taskfile.yaml
@@ -44,7 +44,7 @@ tasks:
       - test -f {{.CLUSTER_DIR}}/talosconfig
       - which jq kubectl talosctl
   upgrade-k8s:
-    desc: Upgrade Kubernetes across the whole cluster [VERSION=required]
+    desc: Upgrade Kubernetes across the whole cluster
     dotenv: ['{{.BOOTSTRAP_DIR}}/.cluster.env']
     cmds:
       - task: down
