--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -12,6 +12,8 @@ repositories:
     url: https://coredns.github.io/helm
   - name: external-secrets
     url: https://charts.external-secrets.io
+  - name: jetstack
+    url: https://charts.jetstack.io
 releases:
   - name: kube-prometheus-stack-crds
     namespace: observability
@@ -22,7 +24,7 @@ releases:
     chart: cilium/cilium
     version: 1.16.5
     values:
-      - ../../apps/kube-system/cilium/app/helm-values.yaml
+      - ../apps/kube-system/cilium/app/helm-values.yaml
     needs:
       - observability/kube-prometheus-stack-crds
   - name: coredns
@@ -30,15 +32,15 @@ releases:
     chart: coredns/coredns
     version: 1.37.1
     values:
-      - ../../apps/kube-system/coredns/app/helm-values.yaml
+      - ../apps/kube-system/coredns/app/helm-values.yaml
     needs:
       - kube-system/cilium
-  - name: spegel
-    namespace: kube-system
-    chart: oci://ghcr.io/spegel-org/helm-charts/spegel
-    version: v0.0.29
+  - name: cert-manager
+    namespace: cert-manager
+    chart: jetstack/cert-manager
+    version: v1.16.3
     values:
-      - ../../apps/kube-system/spegel/app/helm-values.yaml
+      - ../apps/cert-manager/cert-manager/app/helm-values.yaml
     needs:
       - kube-system/coredns
   - name: external-secrets
@@ -62,7 +64,7 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values:
-      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
+      - ../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
       - kube-system/wipe-rook
   - name: flux-instance
@@ -71,6 +73,6 @@ releases:
     version: 0.13.0
     wait: false
     values:
-      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
+      - ../apps/flux-system/flux-operator/instance/helm-values.yaml
     needs:
       - flux-system/flux-operator
