--- a/kubernetes/bootstrap/apps/helmfile.yaml
+++ b/kubernetes/bootstrap/apps/helmfile.yaml
@@ -24,7 +24,7 @@ releases:
     chart: cilium/cilium
     version: 1.16.5
     values:
-      - ../apps/kube-system/cilium/app/helm-values.yaml
+      - ../../apps/kube-system/cilium/app/helm-values.yaml
     needs:
       - observability/kube-prometheus-stack-crds
   - name: coredns
@@ -32,7 +32,7 @@ releases:
     chart: coredns/coredns
     version: 1.37.1
     values:
-      - ../apps/kube-system/coredns/app/helm-values.yaml
+      - ../../apps/kube-system/coredns/app/helm-values.yaml
     needs:
       - kube-system/cilium
   - name: cert-manager
@@ -40,7 +40,7 @@ releases:
     chart: jetstack/cert-manager
     version: v1.16.3
     values:
-      - ../apps/cert-manager/cert-manager/app/helm-values.yaml
+      - ../../apps/cert-manager/cert-manager/app/helm-values.yaml
     needs:
       - kube-system/coredns
   - name: external-secrets
@@ -48,7 +48,7 @@ releases:
     chart: external-secrets/external-secrets
     version: 0.12.1
     values:
-      - ../apps/external-secrets/external-secrets/app/helm-values.yaml
+      - ../../apps/external-secrets/external-secrets/app/helm-values.yaml
     needs:
       - kube-system/coredns
   - name: wipe-rook
@@ -64,7 +64,7 @@ releases:
     chart: oci://ghcr.io/controlplaneio-fluxcd/charts/flux-operator
     version: 0.13.0
     values:
-      - ../apps/flux-system/flux-operator/app/helm-values.yaml
+      - ../../apps/flux-system/flux-operator/app/helm-values.yaml
     needs:
       - kube-system/wipe-rook
   - name: flux-instance
@@ -73,6 +73,6 @@ releases:
     version: 0.13.0
     wait: false
     values:
-      - ../apps/flux-system/flux-operator/instance/helm-values.yaml
+      - ../../apps/flux-system/flux-operator/instance/helm-values.yaml
     needs:
       - flux-system/flux-operator
