--- a/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
+++ b/kubernetes/apps/default/cross-seed/app/externalsecret.yaml
@@ -23,7 +23,7 @@ spec:
             includeNonVideos: true,
             includeSingleEpisodes: true,
             linkCategory: "cross-seed",
-            linkDir: "/media/downloads/torrents/complete/cross-seed",
+            linkDirs: ["/media/downloads/torrents/complete/cross-seed"],
             linkType: "hardlink",
             matchMode: "safe",
             outputDir: "/config",
