--- a/kubernetes/apps/default/sonarr/app/pvc.yaml
+++ b/kubernetes/apps/default/sonarr/app/pvc.yaml
@@ -3,8 +3,8 @@ kind: PersistentVolumeClaim
 metadata:
   name: sonarr
 spec:
-  accessModes: ["ReadWriteMany"]
+  accessModes: ["ReadWriteOnce"]
   resources:
     requests:
       storage: 15Gi
-  storageClassName: ceph-filesystem
+  storageClassName: ceph-block
