--- a/kubernetes/apps/database/mariadb/ks.yaml
+++ b/kubernetes/apps/database/mariadb/ks.yaml
@@ -26,7 +26,7 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: &app mariadb-cluster
-  namespace: flux-system
+  namespace: &namespace database
 spec:
   commonMetadata:
     labels:
