--- a/kubernetes/apps/default/zigbee/ks.yaml
+++ b/kubernetes/apps/default/zigbee/ks.yaml
@@ -30,6 +30,8 @@ spec:
     kind: GitRepository
     name: flux-system
     namespace: flux-system
+  # TODO: when i get a zigbee2mqtt thing
+  suspend: true
   targetNamespace: *namespace
   timeout: 5m
   wait: false
