--- a/kubernetes/apps/default/kustomization.yaml
+++ b/kubernetes/apps/default/kustomization.yaml
@@ -20,6 +20,7 @@ resources:
   - ./bazarr/ks.yaml
   - ./cross-seed/ks.yaml
   - ./audiobookshelf/ks.yaml
+  - ./open-webui/ks.yaml
   - ./plex/ks.yaml
   - ./pocket-id/ks.yaml
   - ./tautulli/ks.yaml
